--- a/_ViewImports.cshtml
+++ b/_ViewImports.cshtml
@@ -1,4 +1,3 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using TatryExplorer.Areas.Identity
-@using TatryExplorer.Areas.Identity.Pages
+﻿@using TatryExplorer
+@using TatryExplorer.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
